gitops/apps/octoprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
  namespace: octoprint
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: User Services
    gethomepage.dev/name: OctoPrint
    gethomepage.dev/icon: octoprint
    gethomepage.dev/description: 3D Printing
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/controller: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - octoprint.apocalypso.xyz
      secretName: octoprint-tls
  rules:
    - host: octoprint.apocalypso.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octoprint
                port:
                  number: 80
